--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,19 @@
+/*
+ * Copyright 2016 madhead <siarhei.krukau@gmail.com>
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 buildscript {
 	repositories {
 		mavenCentral()
@@ -8,8 +24,12 @@ buildscript {
 	}
 }
 
+plugins {
+	id 'application'
+	id 'com.jfrog.bintray' version '1.6'
+}
+
 apply plugin: 'kotlin'
-apply plugin: 'application'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
@@ -30,3 +50,24 @@ dependencies {
 }
 
 mainClassName = 'by.dev.madhead.packt4free.MainKt'
+
+bintray {
+	user = System.getenv('PACKT4FREE_BINTRAY_USER')
+	key = System.getenv('PACKT4FREE_BINTRAY_KEY')
+	publish = true
+
+	pkg {
+		repo = 'madhead'
+		name = 'packt4free'
+		websiteUrl = 'https://github.com/madhead/packt4free'
+		issueTrackerUrl = 'https://github.com/madhead/packt4free/issues'
+		vcsUrl = 'https://github.com/madhead/packt4free.git'
+		licenses = ['Apache-2.0']
+		labels = ['packt', 'packt publishing', 'ebook', 'eboook']
+	}
+
+	filesSpec {
+		from "$buildDir/distributions"
+		into '/'
+	}
+}
