Add release plugin

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 plugins {
 	id 'application'
 	id 'com.jfrog.bintray' version '1.6'
+	id 'net.researchgate.release' version '2.3.5'
 }
 
 apply plugin: 'kotlin'
